fix(splitview): use full width on smaller screen layout

--- a/src/styles/components/splitView/__splitView.sass
+++ b/src/styles/components/splitView/__splitView.sass
@@ -25,8 +25,8 @@
 
     .splitview_list.splitview_list,
     .splitview_detail.splitview_detail
-        width: 85.2%
-        max-width: none
+        width: 100%
+        max-width: unset
         margin-left: 0
 
     .splitview_list
